# tools-graph_analysis

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  COPYING.LESSER  Dockerfile  Doxyfile.in  LICENSE  README.md  execute_launcher_wrapper.rb  manifest.xml  startup_mars.yml  test.py
bindings/python/: CMakeLists.txt  _graph_analysis.pxd  graph_analysis.pyx  setup.py.in
gui/: CMakeLists.txt  manifest.xml
gui/src/: CMakeLists.txt  MainWindow.cpp  Utils.cpp
gui/src/graphwidget/: EdgeTypeManager.cpp  GVGraph.cpp  GraphWidget.cpp  Main.cpp  NodeItem.cpp  NodeTypeManager.cpp  NodeTypeManager.hpp
gui/src/ui/: add_regex_filter_dialog.ui  planning_widget.ui  properties_widget.ui
gui/test/: CMakeLists.txt
src/: Algorithms.hpp  Attribute.cpp  Attribute.hpp  AttributeManager.cpp  AttributeManager.hpp  BaseGraph.cpp  BaseGraph.hpp  BaseGraphObserver.hpp  BaseIterable.hpp  BaseIterator.hpp  BaseVertex.cpp  BaseVertex.hpp  Benchmark.cpp  BipartiteGraph.cpp  BipartiteGraph.hpp  CMakeLists.txt  ClusterVertex.cpp  ClusterVertex.hpp  DirectedGraphInterface.cpp  DirectedGraphInterface.hpp  DirectedHyperEdge.cpp  DirectedHyperEdge.hpp  Dummy.cpp  Dummy.hpp  Edge.cpp  Edge.hpp  EdgeIterable.cpp  EdgeIterable.hpp  EdgeIterator.cpp  EdgeIterator.hpp  EdgeProperty.hpp  EdgeRegistration.hpp  EdgeTypeManager.cpp  EdgeTypeManager.hpp  Filter.cpp  Filter.hpp  Graph.cpp  Graph.hpp  GraphAnalysis.hpp  GraphElement.cpp  (+57 more)
src/algorithms/: BFS.cpp  BFS.hpp  BFSVisitor.hpp  CmdlineSolver.hpp  ConstraintViolation.cpp  ConstraintViolation.hpp  CorrelationClustering.cpp  CorrelationClustering.hpp  DFS.cpp  DFS.hpp  DFSVisitor.hpp  Delta.cpp  Delta.hpp  DistanceMatrix.hpp  FloydWarshall.cpp  FloydWarshall.hpp  GLPKSolver.cpp  GLPKSolver.hpp  LPSolver.cpp  LPSolver.hpp  MinCostFlow.cpp  MinCostFlow.hpp  MultiCommodityEdge.cpp  MultiCommodityEdge.hpp  MultiCommodityMinCostFlow.cpp  MultiCommodityMinCostFlow.hpp  MultiCommodityVertex.cpp  MultiCommodityVertex.hpp  ScipSolver.cpp  ScipSolver.hpp  Skipper.hpp  SoplexSolver.cpp  SoplexSolver.hpp  Visitor.cpp  Visitor.hpp
src/algorithms/lp/: CBCSolver.cpp  CBCSolver.hpp  CLPSolver.cpp  CLPSolver.hpp  CommandlineSolver.cpp  CommandlineSolver.hpp  GLPKSolver.cpp  GLPKSolver.hpp  Problem.cpp  Problem.hpp  ScipSolver.cpp  ScipSolver.hpp  Solution.cpp  Solution.hpp
src/boost_graph/: ArcIterator.hpp  DirectedGraph.cpp  DirectedGraph.hpp  DirectedSubGraph.cpp  DirectedSubGraph.hpp  NodeIterator.hpp
src/diagramscene/: arrow.cpp  arrow.h  diagramitem.cpp  diagramitem.h  diagramscene.cpp  diagramscene.h  diagramtextitem.cpp  diagramtextitem.h  graphicsview-diagramscene-diagramscene-qrc.html  main.cpp  mainwindow.cpp  mainwindow.h
src/elasticnodes/: Edge.cpp  Edge.hpp  GraphWidget.cpp  GraphWidget.hpp  Main.cpp  Node.cpp  Node.hpp
src/filters/: CommonFilters.hpp  EdgeContextFilter.cpp  EdgeContextFilter.hpp  RegexFilters.cpp  RegexFilters.hpp
src/filterwidget/: AddRegexFilterDialog.cpp  AddRegexFilterDialog.hpp  FilterWidget.cpp  FilterWidget.hpp
src/graphwidget/: EdgeItem.cpp  EdgeItem.hpp  EdgeTypeManager.cpp  EdgeTypeManager.hpp  GVGraph.cpp  GVGraph.hpp  GraphWidget.cpp  GraphWidget.hpp  Main.cpp  NodeItem.cpp  NodeItem.hpp  NodeTypeManager.cpp  NodeTypeManager.hpp
src/graphwidget/filters/: Filters.hpp
src/gui/: ActionCommander.cpp  ActionCommander.hpp  AddFilterDialog.cpp  AddFilterDialog.hpp  AddGraphElement.cpp  AddGraphElement.hpp  AddNodeDialog.cpp  AddNodeDialog.hpp  ComponentEditorWidget.cpp  ComponentEditorWidget.hpp  CustomDialog.cpp  CustomDialog.hpp  CustomTabWidget.cpp  CustomTabWidget.hpp  EdgeGetter.hpp  EdgeItem.cpp  EdgeItem.hpp  EdgeItemBase.cpp  EdgeItemBase.hpp  EdgeItemSimple.cpp  EdgeItemSimple.hpp  EdgeItemTypeManager.cpp  EdgeItemTypeManager.hpp  EdgeMimeData.cpp  EdgeMimeData.hpp  EdgeTypeManager.cpp  EdgeTypeManager.hpp  FilterItem.cpp  FilterItem.hpp  FilterManager.cpp  FilterManager.hpp  GVGraph.cpp  GVGraph.hpp  GraphAnalysisGui.cpp  GraphAnalysisGui.hpp  GraphAnalysisGui.ui  GraphLayout.cpp  GraphLayout.hpp  GraphLayoutManager.cpp  GraphLayoutManager.hpp  (+68 more)
src/io/: CndModelReader.cpp  CndModelReader.hpp  CndModelWriter.cpp  CndModelWriter.hpp  GVGraph.cpp  GVGraph.hpp  GexfReader.cpp  GexfReader.hpp  GexfWriter.cpp  GexfWriter.hpp  GraphMLReader.cpp  GraphMLReader.hpp  GraphMLWriter.cpp  GraphMLWriter.hpp  GraphvizGridStyle.cpp  GraphvizGridStyle.hpp  GraphvizStyle.hpp  GraphvizWriter.cpp  GraphvizWriter.hpp  OrogenModelReader.cpp  OrogenModelReader.hpp  Serialization.hpp  YamlExportWriter.cpp  YamlExportWriter.hpp  YamlReader.cpp  YamlReader.hpp  YamlWriter.cpp  YamlWriter.hpp
src/lemon/: ArcIterator.hpp  DirectedGraph.cpp  DirectedGraph.hpp  DirectedSubGraph.cpp  DirectedSubGraph.hpp  Graph.cpp  Graph.hpp  NodeIterator.hpp
src/organizationmodelwidget/: AddActorDialog.cpp  AddActorDialog.hpp  OrganizationModelWidget.cpp  OrganizationModelWidget.hpp
src/percolation/: EdgePercolation.cpp  EdgePercolation.hpp  Event.cpp  Event.hpp  RandomNumberGenerator.cpp  RandomNumberGenerator.hpp  Strategy.hpp  VertexPercolation.cpp  VertexPercolation.hpp
src/planningwidget/: PlanningProblemDialog.cpp  PlanningProblemDialog.hpp  PlanningWidget.cpp  PlanningWidget.hpp
src/propertieswidget/: PropertiesWidget.cpp  PropertiesWidget.hpp
src/snap/: DirectedGraph.cpp  DirectedGraph.hpp  DirectedSubGraph.cpp  DirectedSubGraph.hpp  EdgeIterator.hpp  Graph.hpp  NodeIterator.hpp
src/task_graph/: DataType.cpp  DataType.hpp  DataValue.cpp  DataValue.hpp  HasFeature.hpp  HasUniqueFeature.hpp  InputPort.cpp  InputPort.hpp  InstanceOf.hpp  OutputPort.cpp  OutputPort.hpp  Port.cpp  Port.hpp  PortConnection.cpp  PortConnection.hpp  Property.cpp  Property.hpp  Task.cpp  Task.hpp  TaskTemplate.cpp  TaskTemplate.hpp  TaskTemplateContainer.cpp  TaskTemplateContainer.hpp
src/ui/: add_actor_dialog.ui  add_regex_filter_dialog.ui  filter_regex_widget.ui  filter_widget.ui  omviz.ui  organization_model_widget.ui  planning_problem_dialog.ui  planning_widget.ui
src/utils/: Filesystem.cpp  Filesystem.hpp  GraphReaderMain.cpp  MD5.cpp  MD5.hpp
(+203 files in other folders)
