find_package(Boost REQUIRED regex filesystem system)
rock_library(graph_analysis
    SOURCES
        BaseGraph.cpp
        BipartiteGraph.cpp
        Edge.cpp
        EdgeIterable.cpp
        EdgeIterator.cpp
        EdgeTypeManager.cpp
        Filter.cpp
        GraphElement.cpp
        GraphIO.cpp
        Percolation.cpp
        SubGraph.cpp
        Vertex.cpp
        VertexIterable.cpp
        VertexIterator.cpp
        VertexTypeManager.cpp
        algorithms/BFS.cpp
        algorithms/ConstraintViolation.cpp
        algorithms/CorrelationClustering.cpp
        algorithms/DFS.cpp
        algorithms/FloydWarshall.cpp
        algorithms/GLPKSolver.cpp
        algorithms/MinCostFlow.cpp
        algorithms/MultiCommodityEdge.cpp
        algorithms/MultiCommodityMinCostFlow.cpp
        algorithms/MultiCommodityVertex.cpp
        algorithms/Visitor.cpp
        boost_graph/DirectedGraph.cpp
        filters/EdgeContextFilter.cpp
        filters/RegexFilters.cpp
        gui/GraphAnalysisGui.cpp
        gui/QBaseGraph.cpp
        gui/ActionCommander.cpp
        gui/EdgeItem.cpp
        gui/EdgeItemTypeManager.cpp
        gui/FilterItem.cpp
        gui/FilterManager.cpp
        gui/GraphWidget.cpp
        gui/GraphWidgetManager.cpp
        gui/IconManager.cpp
        gui/VertexItemBase.cpp
        gui/EdgeItemBase.cpp
        gui/NodeItem.cpp
        gui/NodeItemTypeManager.cpp
        gui/WidgetManager.cpp
        gui/dialogs/AddFilterDialog.cpp
        gui/dialogs/AddGraphElement.cpp
        gui/dialogs/CustomDialog.cpp
        gui/dialogs/ExportFile.cpp
        gui/dialogs/RenameFeatureDialog.cpp
        gui/dialogs/RenameFilterDialog.cpp
        gui/dialogs/SwapFeaturesDialog.cpp
        gui/dialogs/SwapFiltersDialog.cpp
        gui/graphitem/Cluster.cpp
        gui/graphitem/Simple.cpp
        gui/graphitem/edges/Simple.cpp
        gui/items/Feature.cpp
        gui/items/Label.cpp
        gui/EdgeMimeData.cpp
        gui/BaseGraphView/BaseGraphView.cpp
        gui/BaseGraphView/AddVertexDialog.cpp
        gui/BaseGraphView/AddEdgeDialog.cpp
        task_graph/TaskTemplate.cpp
        task_graph/Task.cpp
        task_graph/Port.cpp
        task_graph/Property.cpp
        task_graph/InputPort.cpp
        task_graph/OutputPort.cpp
        task_graph/PortConnection.cpp
        gui/TaskGraphEditor/TaskGraphViewer.cpp
        gui/TaskGraphEditor/TaskGraphEditor.cpp
        gui/TaskGraphEditor/TaskItem.cpp
        gui/TaskGraphEditor/PortItem.cpp
        gui/TaskGraphEditor/InputPortItem.cpp
        gui/TaskGraphEditor/OutputPortItem.cpp
        gui/TaskGraphEditor/PortConnectionItem.cpp
        io/GVGraph.cpp
        io/GexfReader.cpp
        io/GexfWriter.cpp
        io/GraphvizWriter.cpp
        io/OrogenModelReader.cpp
        io/CndModelReader.cpp
        io/CndModelWriter.cpp
        io/YamlReader.cpp
        io/YamlWriter.cpp
        lemon/DirectedGraph.cpp
        lemon/DirectedSubGraph.cpp
        percolation/Event.cpp
        percolation/RandomNumberGenerator.cpp
        percolation/strategies/RandomDraw.cpp
        percolation/strategies/UniformRandomEdgeRemoval.cpp
        percolation/strategies/UniformRandomVertexRemoval.cpp
        snap/DirectedGraph.cpp
        snap/DirectedSubGraph.cpp
    HEADERS
        Algorithms.hpp
        BaseGraph.hpp
        BaseGraphObserver.hpp
        BaseIterable.hpp
        BipartiteGraph.hpp
        DirectedGraphInterface.hpp
        Edge.hpp
        EdgeIterable.hpp
        EdgeIterator.hpp
        EdgeTypeManager.hpp
        Filter.hpp
        Graph.hpp
        GraphAnalysis.hpp
        GraphElement.hpp
        GraphIO.hpp
        NWeighted.hpp
        NWeightedEdge.hpp
        Percolation.hpp
        SharedPtr.hpp
        SubGraph.hpp
        SubGraphImpl.hpp
        TypedGraph.hpp
        Vertex.hpp
        VertexIterable.hpp
        VertexIterator.hpp
        VertexTypeManager.hpp
        WeightedEdge.hpp
        WeightedVertex.hpp
        algorithms/BFS.hpp
        algorithms/BFSVisitor.hpp
        algorithms/ConstraintViolation.hpp
        algorithms/CorrelationClustering.hpp
        algorithms/DistanceMatrix.hpp
        algorithms/DFS.hpp
        algorithms/DFSVisitor.hpp
        algorithms/FloydWarshall.hpp
        algorithms/GLPKSolver.hpp
        algorithms/MinCostFlow.hpp
        algorithms/MultiCommodityEdge.hpp
        algorithms/MultiCommodityMinCostFlow.hpp
        algorithms/MultiCommodityVertex.hpp
        algorithms/Visitor.hpp
        boost_graph/DirectedGraph.hpp
        filters/CommonFilters.hpp
        filters/EdgeContextFilter.hpp
        filters/RegexFilters.hpp
        gui/GraphAnalysisGui.hpp
        gui/QBaseGraph.hpp
        gui/ActionCommander.hpp
        gui/EdgeItem.hpp
        gui/EdgeItemTypeManager.hpp
        gui/FilterItem.hpp
        gui/FilterManager.hpp
        gui/GraphWidget.hpp
        gui/GraphWidgetManager.hpp
        gui/IconManager.hpp
        gui/VertexItemBase.hpp
        gui/EdgeItemBase.hpp
        gui/NodeItem.hpp
        gui/NodeItemTypeManager.hpp
        gui/WidgetManager.hpp
        gui/dialogs/AddFilterDialog.hpp
        gui/dialogs/AddGraphElement.hpp
        gui/dialogs/CustomDialog.hpp
        gui/dialogs/ExportFile.hpp
        gui/dialogs/RenameFeatureDialog.hpp
        gui/dialogs/RenameFilterDialog.hpp
        gui/dialogs/SwapFeaturesDialog.hpp
        gui/dialogs/SwapFiltersDialog.hpp
        gui/graphitem/Cluster.hpp
        gui/graphitem/Simple.hpp
        gui/graphitem/edges/Simple.hpp
        gui/items/Feature.hpp
        gui/items/Label.hpp
        gui/EdgeMimeData.hpp
        gui/BaseGraphView/BaseGraphView.hpp
        gui/BaseGraphView/AddVertexDialog.hpp
        gui/BaseGraphView/AddEdgeDialog.hpp
        task_graph/TaskTemplate.hpp
        task_graph/Task.hpp
        task_graph/Port.hpp
        task_graph/Property.hpp
        task_graph/InputPort.hpp
        task_graph/OutputPort.hpp
        task_graph/PortConnection.hpp
        task_graph/HasFeature.hpp
        task_graph/HasUniqueFeature.hpp
        task_graph/InstanceOf.hpp
        gui/TaskGraphEditor/TaskGraphViewer.hpp
        gui/TaskGraphEditor/TaskGraphEditor.hpp
        gui/TaskGraphEditor/TaskItem.hpp
        gui/TaskGraphEditor/PortItem.hpp
        gui/TaskGraphEditor/InputPortItem.hpp
        gui/TaskGraphEditor/OutputPortItem.hpp
        gui/TaskGraphEditor/PortConnectionItem.hpp
        io/GVGraph.hpp
        io/GexfReader.hpp
        io/GexfWriter.hpp
        io/GraphvizStyle.hpp
        io/GraphvizWriter.hpp
        io/OrogenModelReader.hpp
        io/CndModelReader.hpp
        io/CndModelWriter.hpp
        io/YamlReader.hpp
        io/YamlWriter.hpp
        lemon/ArcIterator.hpp
        lemon/DirectedGraph.hpp
        lemon/DirectedSubGraph.hpp
        lemon/Graph.hpp
        lemon/NodeIterator.hpp
        percolation/Event.hpp
        percolation/RandomNumberGenerator.hpp
        percolation/strategies/RandomDraw.hpp
        percolation/strategies/UniformRandomEdgeRemoval.hpp
        percolation/strategies/UniformRandomVertexRemoval.hpp
        snap/DirectedGraph.hpp
        snap/DirectedSubGraph.hpp
        snap/EdgeIterator.hpp
        snap/Graph.hpp
        snap/NodeIterator.hpp
    DEPS_PKGCONFIG
        lemon snap base-lib gexf numeric gsl libgvc utilmm yaml-cpp
    DEPS_PLAIN
        Boost_REGEX
    MOC
        gui/GraphAnalysisGui.hpp
        gui/QBaseGraph.hpp
        gui/FilterManager.hpp
        gui/GraphWidget.hpp
        gui/GraphWidgetManager.hpp
        gui/dialogs/AddFilterDialog.hpp
        gui/dialogs/AddGraphElement.hpp
        gui/dialogs/ExportFile.hpp
        gui/dialogs/RenameFeatureDialog.hpp
        gui/dialogs/RenameFilterDialog.hpp
        gui/dialogs/SwapFeaturesDialog.hpp
        gui/dialogs/SwapFiltersDialog.hpp
        gui/BaseGraphView/BaseGraphView.hpp
        gui/BaseGraphView/AddVertexDialog.hpp
        gui/BaseGraphView/AddEdgeDialog.hpp
        gui/TaskGraphEditor/TaskGraphViewer.hpp
        gui/TaskGraphEditor/TaskGraphEditor.hpp
    DEPS_PKGCONFIG QtGui
    UI
        gui/GraphAnalysisGui.ui
        gui/BaseGraphView/AddVertexDialog.ui
        gui/BaseGraphView/AddEdgeDialog.ui
        gui/TaskGraphEditor/TaskGraphEditor.ui
        gui/dialogs/add_filter_dialog_gui.ui
        gui/dialogs/add_graph_element.ui
        gui/dialogs/graph_analysis_gui.ui
        gui/dialogs/property_dialog_gui.ui
        gui/dialogs/rename_feature_dialog_gui.ui
        gui/dialogs/swap_features_dialog_gui.ui
        gui/dialogs/swap_filters_dialog_gui.ui
)
target_link_libraries(graph_analysis glpk cgraph)
get_target_property(graph_analysis-linker_flags graph_analysis LINK_FLAGS)
if(graph_analysis-linker_flags)
    set(graph_analysis-linker_flags "${graph_analysis-linker_flags} -Wl,--exclude-libs=libsnap.a" )
else()
    set(graph_analysis-linker_flags "-Wl,--exclude-libs=libsnap.a" )
endif()
set_target_properties(graph_analysis PROPERTIES LINK_FLAGS ${graph_analysis-linker_flags})

rock_executable(graph_analysis-bm Benchmark.cpp
    DEPS graph_analysis
    DEPS_PLAIN rt
        Boost_FILESYSTEM
        Boost_SYSTEM
    NOINSTALL)

rock_executable(graph_analysis-gui gui/main.cpp
    DEPS graph_analysis
    )

rock_executable(graph_analysis-reader utils/GraphReaderMain.cpp
    DEPS graph_analysis
    )
